force-app/package/core/objects/Schema_Instruction_Version__c/Schema_Instruction_Version__c.object-meta.xml
<CustomObject>
    <description>Version data of the Schema Instructions</description>
    <label>Schema Instruction Version</label>
    <nameField>
        <displayFormat>SIV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schema Instruction Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>