force-app/package/core/objects/Schema_Instruction_Version__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The latest versions is the active version that will outputted in the prompt template</inlineHelpText>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>