force-app/package/core/objects/Schema_Instruction_Version__c/fields/Prompt_Output__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Output__c</fullName>
    <inlineHelpText>The output as it will be displayed in the prompt template.</inlineHelpText>
    <label>Prompt Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>