force-app/package/core/objects/Schema_Instruction_Version__c/fields/Prompt_Output_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Output_Hash__c</fullName>
    <inlineHelpText>A SHA1 hash to validate changes between the latest versions</inlineHelpText>
    <label>Prompt Output Hash</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>