force-app/package/core/objects/Schema_Instruction_Version__c/fields/Schema_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Schema_Instruction__c</fullName>
    <label>Schema Instruction</label>
    <referenceTo>Schema_Instruction__c</referenceTo>
    <relationshipLabel>Schema Instruction Versions</relationshipLabel>
    <relationshipName>Schema_Instruction_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>