force-app/package/core/objects/Schema_Instruction_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <inlineHelpText>The version of the instructions, will auto increase by 1</inlineHelpText>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>